tests/mm0_mmu/fail/bad-sort1432.mm0
-- bad modifier order
pure free provable strict sort s1432;